--- a/android/app/src/main/res/drawable/custom_edittext.xml
+++ b/android/app/src/main/res/drawable/custom_edittext.xml
@@ -3,8 +3,8 @@
         android:shape="rectangle">
         <stroke
             android:width="3dp"
-            android:color="@color/gray"/>
+            android:color="@color/blue"/>
         <corners
-            android:radius="20dp"/>
+            android:radius="10dp"/>
 
     </shape>
