--- a/android/app/src/main/res/layout/activity_register.xml
+++ b/android/app/src/main/res/layout/activity_register.xml
@@ -1,191 +1,230 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <ImageView
-        android:id="@+id/imgBackLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/iconback"
-        android:padding="5dp"
-        android:layout_alignParentTop="true"/>
-
-    <LinearLayout
-    android:id="@+id/register"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:src="@drawable/logoute" />
+    >
 
-    <TextView
+    <!-- Header Layout -->
+    <LinearLayout
+        android:id="@+id/layout_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="HCMUTE Forums "
-        android:textSize="32dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textColor="@color/black"/>
-     <androidx.cardview.widget.CardView
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:orientation="vertical"
-         android:layout_gravity="center"
-         android:background="@drawable/custom_edittext">
-         <LinearLayout
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:orientation="vertical"
-             android:layout_gravity="center_horizontal"
-             android:padding="24dp">
-             <TextView
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:text="Đăng kí tài khoản"
-                 android:id="@+id/tvRegister"
-                 android:textSize="30dp"
-                 android:textStyle="bold"
-                 android:textColor="@color/blue"/>
-             <EditText
-                 android:id="@+id/register_edtFullname"
-                 android:layout_width="match_parent"
-                 android:layout_height="50dp"
-                 android:layout_marginTop="20dp"
-                 android:background="@drawable/custom_edittext"
-                 android:drawableLeft="@drawable/iconname"
-                 android:drawablePadding="8dp"
-                 android:hint="Họ và tên"
-                 android:padding="8dp"
-                 android:textColor="@color/black"
-                 android:textColorHighlight="@color/cardview_dark_background" />
+        android:orientation="vertical"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-             <EditText
-                 android:id="@+id/register_etDOB"
-                 android:layout_width="match_parent"
-                 android:layout_height="50dp"
-                 android:padding="8dp"
-                 android:layout_marginTop="20dp"
-                 android:background="@drawable/custom_edittext"
-                 android:drawableLeft="@drawable/icondate"
-                 android:drawablePadding="8dp"
-                 android:hint="Nhập ngày sinh (dd/MM/yyyy)"
-                 android:textColor="@color/black"
-                 android:textColorHighlight="@color/cardview_dark_background"
-                 android:focusable="false"
-                 android:clickable="true"
-                 android:inputType="none"/>
-             <LinearLayout
-                 android:layout_width="match_parent"
-                 android:layout_height="50dp"
-                 android:layout_marginTop="20dp"
-                 android:background="@drawable/custom_edittext"
-                 android:padding="8dp"
-                 android:gravity="center_vertical"
-                 android:orientation="horizontal">
-
-                 <!-- Icon giống EditText -->
-                 <ImageView
-                     android:layout_width="24dp"
-                     android:layout_height="24dp"
-                     android:src="@drawable/icongender"
-                     android:layout_marginEnd="8dp"
-                     android:contentDescription="Icon giới tính" />
-
-                 <!-- RadioGroup -->
-                 <RadioGroup
-                     android:id="@+id/rg_gender"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:orientation="horizontal">
-
-                     <RadioButton
-                         android:id="@+id/rb_male"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:text="Nam" />
-
-                     <RadioButton
-                         android:id="@+id/rb_female"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:text="Nữ"
-                         />
-                     <RadioButton
-                         android:id="@+id/rb_other"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:text="Khác"/>
-                 </RadioGroup>
-             </LinearLayout>
-             <EditText
-                 android:id="@+id/register_edtEmail"
-                 android:layout_width="match_parent"
-                 android:layout_height="50dp"
-                 android:layout_marginTop="20dp"
-                 android:background="@drawable/custom_edittext"
-                 android:drawableLeft="@drawable/iconemail"
-                 android:drawablePadding="8dp"
-                 android:hint="Ẹmail"
-                 android:padding="8dp"
-                 android:textColor="@color/black"
-                 android:textColorHighlight="@color/cardview_dark_background" />
-             <EditText
-                 android:id="@+id/register_edtUsername"
-                 android:layout_width="match_parent"
-                 android:layout_height="50dp"
-                 android:layout_marginTop="20dp"
-                 android:background="@drawable/custom_edittext"
-                 android:drawableLeft="@drawable/baseline_person_24"
-                 android:drawablePadding="8dp"
-                 android:hint="Tên đăng nhập"
-                 android:padding="8dp"
-                 android:textColor="@color/black"
-                 android:textColorHighlight="@color/cardview_dark_background" />
-
-             <EditText
-                 android:layout_width="match_parent"
-                 android:layout_height="50dp"
-                 android:id="@+id/register_edtPassword"
-                 android:background="@drawable/custom_edittext"
-                 android:drawableLeft="@drawable/baseline_lock_24"
-                 android:drawablePadding="8dp"
-                 android:hint="Mật khẩu"
-                 android:padding="8dp"
-                 android:inputType="textPassword"
-                 android:textColor="@color/black"
-                 android:textColorHighlight="@color/cardview_dark_background"
-                 android:layout_marginTop="20dp"/>
-
-             <Button
-                 android:layout_width="wrap_content"
-                 android:layout_height="50dp"
-                 android:id="@+id/btnNextOTP"
-                 android:text="Tiếp theo"
-                 android:textSize="18sp"
-                 android:layout_marginTop="20dp"
-                 android:backgroundTint="@color/blue"
-                 android:layout_gravity="end"
-                 app:cornerRadius = "20dp"
-                 android:drawableRight="@drawable/iconnext"
-                 />
-
-         </LinearLayout>
-     </androidx.cardview.widget.CardView>
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="Bạn đã có tài khoản? Đăng nhập ngay"
-            android:textSize="14sp"
-            android:textAlignment="center"
-            android:id="@+id/register_tvBackLogin"
-            android:textColor="@color/blue"
-            android:layout_marginBottom="20dp"/>
-</LinearLayout>
-</RelativeLayout>
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:padding="8dp">
+
+            <!-- Row chứa Icon Back & Logo UTE -->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp">
+
+                <!-- Icon Back (trái) -->
+
+                <!-- Logo UTE (giữa) -->
+                <ImageView
+                    android:id="@+id/imgBackLogin"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="3dp"
+                    android:padding="5dp"
+                    android:src="@drawable/iconback" />
+
+                <ImageView
+                    android:id="@+id/logoUTE"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/logoute" />
+            </RelativeLayout>
+
+            <!-- Tiêu đề (bên dưới logo) -->
+            <TextView
+                android:id="@+id/tvRegister"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Đăng ký tài khoản"
+                android:textColor="@color/blue"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <!-- CardView chứa Form Đăng ký -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/layout_header"
+        android:layout_marginTop="10dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="6dp"
+        app:layout_constraintTop_toBottomOf="@id/layout_header"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/custom_edittext">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="24dp">
+
+            <!-- Họ và tên -->
+            <EditText
+                android:id="@+id/register_edtFullname"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/custom_edittext"
+                android:drawableLeft="@drawable/iconname"
+                android:drawablePadding="8dp"
+                android:hint="Họ và tên"
+                android:padding="8dp"
+                android:textColor="@color/black"/>
+
+            <!-- Ngày sinh -->
+            <EditText
+                android:id="@+id/register_etDOB"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/custom_edittext"
+                android:drawableLeft="@drawable/icondate"
+                android:drawablePadding="8dp"
+                android:hint="Nhập ngày sinh (dd/MM/yyyy)"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:focusable="false"
+                android:clickable="true"
+                android:inputType="none"/>
+
+            <!-- Giới tính -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/custom_edittext"
+                android:padding="8dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/icongender"
+                    android:layout_marginEnd="8dp"
+                    android:contentDescription="Icon giới tính" />
+
+                <RadioGroup
+                    android:id="@+id/rg_gender"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/rb_male"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Nam"/>
+
+                    <RadioButton
+                        android:id="@+id/rb_female"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Nữ"/>
+
+                    <RadioButton
+                        android:id="@+id/rb_other"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Khác"/>
+                </RadioGroup>
+            </LinearLayout>
+
+            <!-- Email -->
+            <EditText
+                android:id="@+id/register_edtEmail"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/custom_edittext"
+                android:drawableLeft="@drawable/iconemail"
+                android:drawablePadding="8dp"
+                android:hint="Email"
+                android:padding="8dp"
+                android:textColor="@color/black"/>
+
+            <!-- Tên đăng nhập -->
+            <EditText
+                android:id="@+id/register_edtUsername"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/custom_edittext"
+                android:drawableLeft="@drawable/baseline_person_24"
+                android:drawablePadding="8dp"
+                android:hint="Tên đăng nhập"
+                android:padding="8dp"
+                android:textColor="@color/black"/>
+
+            <!-- Mật khẩu -->
+            <EditText
+                android:id="@+id/register_edtPassword"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/custom_edittext"
+                android:drawableLeft="@drawable/baseline_lock_24"
+                android:drawablePadding="8dp"
+                android:hint="Mật khẩu"
+                android:padding="8dp"
+                android:inputType="textPassword"
+                android:textColor="@color/black"/>
+
+            <!-- Button Tiếp theo -->
+            <Button
+                android:id="@+id/btnNextOTP"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:text="Tiếp theo"
+                android:textSize="18sp"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="@color/blue"
+                android:layout_gravity="end"
+                android:drawableRight="@drawable/iconnext"/>
+
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <!-- Đăng nhập ngay -->
+    <TextView
+        android:id="@+id/register_tvBackLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bạn đã có tài khoản? Đăng nhập ngay"
+        android:textSize="14sp"
+        android:textColor="@color/blue"
+        android:layout_below="@id/card_register"
+        android:layout_centerHorizontal="true"
+        app:layout_constraintTop_toBottomOf="@id/card_register"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        />
+</androidx.constraintlayout.widget.ConstraintLayout>
