--- a/android/app/src/main/res/layout/activity_topic_post.xml
+++ b/android/app/src/main/res/layout/activity_topic_post.xml
@@ -81,7 +81,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_bold"
             android:layout_marginTop="10dp"
-            android:text="Title"
+            android:hint="Title"
             android:textSize="20sp"
             android:padding="10dp"
             android:background="@drawable/edt_title_bg"
@@ -93,7 +93,7 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginTop="10dp"
-            android:text="Content"
+            android:hint="Content"
             android:textSize="14sp"
             android:padding="10dp"
             android:background="@drawable/edt_title_bg"
