--- a/android/app/src/main/res/layout/item_reply.xml
+++ b/android/app/src/main/res/layout/item_reply.xml
@@ -2,19 +2,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp"
     android:layout_width="match_parent"
-    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgAvatar"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/logoute"
-        android:layout_gravity="top"/>
+        android:layout_gravity="top" />
+
     <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="vertical"
-        android:layout_width="match_parent"
         android:layout_marginStart="10dp"
-        android:layout_height="wrap_content">
+        android:layout_marginEnd="10dp">
+
         <TextView
             android:id="@+id/tvUsername"
             android:textStyle="bold"
@@ -23,12 +28,8 @@
             android:text="username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            expandableTextView:collapsedLines="3"
-            expandableTextView:animDuration="500"
-            expandableTextView:readMoreText="xem thêm"
-            expandableTextView:readLessText="thu gọn"
-            expandableTextView:textMode="line"
-            app:expandType="layout"/>
+            app:expandType="layout" />
+
         <TextView
             android:id="@+id/tvContent"
             android:textSize="16sp"
@@ -36,6 +37,7 @@
             android:textColor="#555555"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/tvToggle"
             android:layout_width="wrap_content"
@@ -44,7 +46,7 @@
             android:textSize="12sp"
             android:textColor="@color/gray"
             android:visibility="gone" />
-        <!-- sample xml -->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -55,8 +57,7 @@
                 android:layout_marginTop="3dp"
                 android:textColor="@color/gray"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
+                android:layout_height="wrap_content" />
             <TextView
                 android:visibility="gone"
                 android:layout_marginStart="10dp"
@@ -66,15 +67,17 @@
                 android:layout_marginTop="3dp"
                 android:textColor="@color/gray"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
+                android:layout_height="wrap_content" />
         </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcvChildReplies"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:nestedScrollingEnabled="false" android:visibility="gone" />
+            android:nestedScrollingEnabled="false"
+            android:visibility="gone" />
+
         <TextView
             android:visibility="gone"
             android:layout_marginStart="10dp"
@@ -84,8 +87,8 @@
             android:layout_marginTop="3dp"
             android:textColor="@color/gray"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content" />
+
         <TextView
             android:visibility="gone"
             android:layout_marginStart="10dp"
@@ -95,7 +98,19 @@
             android:layout_marginTop="3dp"
             android:textColor="@color/gray"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-</LinearLayout>
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imgMoreActions"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/ic_memu_more"
+        android:layout_gravity="top"
+        android:contentDescription="More actions"
+        android:padding="4dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="?android:selectableItemBackground" />
+
 </LinearLayout>
