--- a/android/app/src/main/res/layout/activity_topic_detail.xml
+++ b/android/app/src/main/res/layout/activity_topic_detail.xml
@@ -48,6 +48,7 @@
 
                 <!-- Thông tin user -->
                 <LinearLayout
+
                     android:id="@+id/layoutUserInformation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -61,7 +62,8 @@
                         android:src="@drawable/avatar_boy" />
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:paddingStart="16dp">
@@ -82,6 +84,17 @@
                             android:textColor="#666666"
                             android:textSize="12sp" />
                     </LinearLayout>
+                    <ImageView
+                        android:id="@+id/imgMoreActions"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/ic_memu_more"
+                        android:layout_gravity="top"
+                        android:contentDescription="More actions"
+                        android:padding="4dp"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:background="?android:selectableItemBackground" />
                 </LinearLayout>
 
                 <!-- Tiêu đề -->
