--- a/android/app/src/main/res/layout/fragment_profile_user.xml
+++ b/android/app/src/main/res/layout/fragment_profile_user.xml
@@ -255,12 +255,10 @@
     </LinearLayout>
 
     <!-- Danh sách bài đăng -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewPosts"
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
