--- a/android/app/src/main/res/layout/item_topic.xml
+++ b/android/app/src/main/res/layout/item_topic.xml
@@ -34,6 +34,7 @@
                     android:src="@drawable/avatar_boy" />
 
                 <LinearLayout
+                    android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -55,6 +56,18 @@
                         android:textColor="#666666"
                         android:textSize="12sp" />
                 </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/imgMoreActions"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/ic_memu_more"
+                    android:layout_gravity="top"
+                    android:contentDescription="More actions"
+                    android:padding="4dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:background="?android:selectableItemBackground" />
             </LinearLayout>
 
             <!-- Tiêu đề -->
