--- a/android/app/src/main/res/layout/item_follower.xml
+++ b/android/app/src/main/res/layout/item_follower.xml
@@ -59,6 +59,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="8dp"/>
+    <Button
+        android:id="@+id/unFollowButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Đang theo dõi"
+        android:backgroundTint="#000000"
+        android:textColor="@android:color/white"
+        app:layout_constraintEnd_toStartOf="@id/moreButton"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="8dp"/>
 
     <ImageView
         android:id="@+id/moreButton"
